--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 
 *{
     margin: 0;
@@ -394,53 +394,91 @@ span{
 }
 
 
-
-
-
-
-
-
-
-.contact h2 {
-    margin-bottom: 3rem;
+.section.contact{
+	width: 100%;
+	
+	padding: 70px 8% 50px;
+	background-color: var(--bg-clr-2);
+}
+.contact .contact-contents{
+	display: flex;
+	justify-content: space-between;
+}
+.contact-contents .contact-details,
+.contact-contents .contact-form{
+	flex-basis: 50%;
+}
+.contact-contents .contact-details .contact-item{
+	display: flex;
+	align-items: center;
+	margin: 30px 0px;
+}
+.contact-details .contact-item .icon{
+	width: 45px;
+	height: 45px;
+	border: 2px solid var(--primary-base-clr);
+	border-radius: 50%;
+	margin-right: 20px;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.contact-item .icon i{
+	font-size: 18px;
+	color: var(--main-heading-clr);
+}
+.contact-item .contact-text{
+	display: flex;
+	flex-direction: column;
+}
+.contact-item .contact-text span{
+	color: var(--text-clr);
+}
+.contact-item .contact-text span:nth-child(1){
+	color: var(--main-heading-clr);
+	margin-bottom: 5px;
+}
+.contact-contents .contact-form{
+	margin-top: 30px;
+	display: flex;
+	flex-direction: column;
+}
+.contact-contents .contact-form .input-element{
+	position: relative;
+}
+.contact-form .input-element input{
+	width: 100%;
+	border: none;
+	border-radius: 25px;
+	outline: 1px solid #444;
+	padding: 10px 15px;
+	margin-bottom: 15px;
+	font-size: 15px;
+	background-color: var(--bg-clr-1);
+	color: var(--main-heading-clr);
+}
+.contact-contents .contact-form textarea{
+	width: 100%;
+	height: 200px;
+	background-color: var(--bg-clr-1);
+	border: 1px solid #444;
+	border-radius: 10px;
+	outline: none;
+	padding: 15px;
+	color: var(--main-heading-clr);
+	font-size: 15px;
+	resize: none;
+	margin-bottom: 15px;
 }
 
-.contact form {
-    max-width:70rem;
-    margin: 1rem auto;
-    text-align: center;
-    margin-bottom: 3rem;
-}
 
-.contact form .input-box{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
 
-.contact form .input-box input,
-.contact form textarea {
-    width: 100%;
-    padding: 1.5rem;
-    font-size: 1.6rem;
-    color: var(--text-color);
-    border-radius: .8rem;
-    margin: .7rem 0;
-}
 
-.contact form .input-box input {
-    width: 49%;
-}
 
-.contact form  textarea{
 
-    resize: none;
-}
 
-.contact form .btn {
-    margin-top: 2rem;
-    cursor: pointer;
-}
+
 
 /*BREAKPOINT*/
 
